# clobat

./: CMakeLists.txt  README.md
include/: asset.h  cvar.h  globals.h  packer.h  sprite.h  stitch.h  stitcher.h  texture.h  types.h
src/: main.cc  packer.cc  stitch.cc  stitcher.cc  texture.cc
